- feat: upgrade plugin to BepInEx v5.4.2202 - feat: upgrade plugin to Valheim v0.217.38 (network version 20) - feat: upgrade plugin to Jotunn v2.15.0 - feat: upgrade assets to Unity v2022.3.12 - fix: exception when accessing portal station UI - fix: null reference exception when closing game - fix: confusing warnings when starting the game - fix: MonoMod.Backports.dll not found when trying to teleport via portal station - fix: a lot of code smells detected by ReSharper

--- a/UndeadBits.ValheimMods.PortalStation/Assets/Translations/English/en-us.json
+++ b/UndeadBits.ValheimMods.PortalStation/Assets/Translations/English/en-us.json
@@ -4,6 +4,6 @@
   "item_personal_teleportation_device": "Personal Teleportation Device",
   "item_personal_teleportation_device_description": "A personal teleportation device useful to quickly teleport to any available portal station.",
   "item_personal_teleportation_device_usage_hint": "Teleport",
-  "auto_portal_station_name": "Portal Station #{0:00}",
+  "auto_portal_station_name": "Portal Station #PS_NUM",
   "travel_back": "Travel Back"
 }
